<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATB Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="boutonServiceInscription">inscription</string>
    <string name="boutonCompte">Espace client</string>
    <string name="conversion_devise">Conversion devise</string>
    <string name="produit_ATB">Nos produits</string>
    <string name="localiser_GAB">Localiser GAB</string>
    <string name="service_public">Services Publics</string>
    <string name="title_activity_register">ATB Mobile</string>
    <string name="title_activity_espace_client">ATB Mobile</string>
    <string name="titre_activity_accueil">ATB Mobile</string>
    <string name="titre_activity_inscription">Inscription</string>
    <string name="titre_activity_connexion">Connexion</string>
    <string name="titre_activity_espace_client">Espace client</string>
    <string name="title_activity_parametre">ATB Mobile</string>
    <string name="titre_activity_parametre">Paramètres</string>
    <string name="title_activity_chequier">ATB Mobile</string>
    <string name="titre_activity_chequier">Chéquier</string>
    <string name="title_activity_carte">ATB Mobile</string>
    <string name="titre_activity_carte">Carte</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dialogue_numero_compte">DialogueNumeroCompteActivity</string>
    <string name="title_activity_gab_map">GabMap</string>
    <string name="title_activity_historique">ATB Mobile</string>
    <string name="titre_activity_historique">Historique</string>
    <string name="title_activity_statistique">ATB Mobile</string>
    <string name="titre_activity_statistique">Statistique</string>
    <string name="title_activity_compte">ATB Mobile</string>
    <string name="titre_activity_compte">Compte</string>
    <string name="title_activity_virement">ATB Mobile</string>
    <string name="titre_activity_virement">Virement</string>
    <string name="title_activity_conversion">ATB Mobile</string>
    <string name="titre_activity_conversion">Conversion</string>
    <string name="title_activity_produit">ATB Mobile</string>
    <string name="titre_activity_produit">Nos produits</string>
    <string name="title_activity_solde">ATB Mobile</string>
    <string name="titre_activity_solde">Solde du comptes</string>
    <string name="title_activity_gab">GabActivity</string>
    <string name="title_activity_gab_localisation">ATB Mobile</string>
    <string name="title_activity_code">ATB Mobile</string>
    <string name="titre_activity_code">Confirmation</string>
    <string name="confirmation">SVP! entrez votre mot de passe personnel pour continue.</string>
    <string name="title_activity_splash">ATB Mobile</string>
    <string name="title_activity_demande_chequier">ATB Mobile</string>
    <string name="titre_activity_demande_chequier">Demande Chequier</string>
    <string name="title_activity_opposition_chequier">ATB Mobile</string>
    <string name="titre_activity_opposition_chequier">Opposition Chequier</string>
    <string name="title_activity_opposition_carte">ATB Mobile</string>
    <string name="titre_activity_opposition_carte">Opposition carte</string>
    <string name="title_activity_demande_carte">ATB Mobile</string>
    <string name="titre_activity_demande_carte">Demande carte</string>
    <string name="title_activity_password">ATB Mobile</string>
    <string name="titre_activity_password">Mot de passe</string>
    <string name="title_activity_add_mail">ATB Mobile</string>
    <string name="titre_activity_add_mail">Ajouter e-mail</string>
    <string name="title_activity_delete_mail">ATB Mobile</string>
    <string name="titre_activity_delete_mail">Supprimer e-mail</string>

</resources>
